# fastapi-project-template

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 787062366233_29102024_first_version.py
app/: main.py
app/api/: main.py
app/api/http/: products.py
app/core/: logger.py  settings.py
app/database/: base.py  postgres.py
app/middleware/: auth.py  exception.py  http_error_handler.py
app/models/: __init__.py  base.py  products.py
app/repositories/: base.py  product.py
app/schemas/: products.py  users.py
app/services/: base.py  product.py
tests/: conftest.py
tests/unit/controllers/: test_product_controller.py
tests/unit/repositories/: test_product_repository.py
tests/unit/services/: test_product_service.py
