[tool.poetry]
name = "fastapi-project-template"
version = "0.1.0"
description = ""
authors = ["Ha Pham Dinh <phamdinhha95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.4"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
